# cyphus

./: Cargo.toml  README.md
autodiff/: Cargo.toml
autodiff/src/dual/: dual_float.rs
diffeq/: Cargo.toml
integration/: Cargo.toml
integration/src/: qagi.rs
interpolation/: Cargo.toml
nlsolve/: Cargo.toml
special/: Cargo.toml
