[package]
name = "autodiff"
version = "0.1.0"
authors = ["Logan A. Morrison <loanmorr@ucsc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
ndarray="0.13.1"

[dependencies.log]
version = "0.4.8"

[dependencies.num]
num = "0.3.1"
